--- a/TemplatedControlSample/TemplatedControlSample/TemplatedControlSample.csproj
+++ b/TemplatedControlSample/TemplatedControlSample/TemplatedControlSample.csproj
@@ -143,6 +143,9 @@
     <Compile Include="Models\ScoreModel.cs" />
     <Compile Include="MyContentControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertySamplePage.xaml.cs">
+      <DependentUpon>PropertySamplePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SimpleItemsControlSample.xaml.cs">
       <DependentUpon>SimpleItemsControlSample.xaml</DependentUpon>
     </Compile>
@@ -215,6 +218,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="MenuItemSamplePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PropertySamplePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
