--- a/ControlsTreeView/AssemblyHelper/AssemblyHelper.csproj
+++ b/ControlsTreeView/AssemblyHelper/AssemblyHelper.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeDefinition.cs" />
     <Compile Include="TypeSeeker.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
