--- a/PathDemo/PathDemoSilverlight/PathDemoSilverlight.csproj
+++ b/PathDemo/PathDemoSilverlight/PathDemoSilverlight.csproj
@@ -79,6 +79,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Triangle.cs" />
+    <Compile Include="Triangle2.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
