--- a/PathDemo/PathDemo/PathDemo.csproj
+++ b/PathDemo/PathDemo/PathDemo.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="PerformanceCanvas1Page.xaml.cs">
+      <DependentUpon>PerformanceCanvas1Page.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ShapeDemo.xaml.cs">
       <DependentUpon>ShapeDemo.xaml</DependentUpon>
     </Compile>
@@ -71,6 +74,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PerformanceCanvas1Page.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ShapeDemo.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
