--- a/PathDemo/PathDemoUWwp/PathDemoUWwp.csproj
+++ b/PathDemo/PathDemoUWwp/PathDemoUWwp.csproj
@@ -102,6 +102,8 @@
       <DependentUpon>PerformanceCanvas1Page.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RingSegment.cs" />
+    <Compile Include="RingSegment2.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
