--- a/PathDemo/PathDemoUWwp/PathDemoUWwp.csproj
+++ b/PathDemo/PathDemoUWwp/PathDemoUWwp.csproj
@@ -100,6 +100,9 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PathDemo.xaml.cs">
+      <DependentUpon>PathDemo.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PerformanceCanvas1Page.xaml.cs">
       <DependentUpon>PerformanceCanvas1Page.xaml</DependentUpon>
     </Compile>
@@ -134,6 +137,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="PathDemo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="PerformanceCanvas1Page.xaml">
       <SubType>Designer</SubType>
