--- a/PathDemo/PathDemoSilverlight/PathDemoSilverlight.csproj
+++ b/PathDemo/PathDemoSilverlight/PathDemoSilverlight.csproj
@@ -78,8 +78,12 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RingSegment.cs" />
     <Compile Include="Triangle.cs" />
     <Compile Include="Triangle2.cs" />
+    <Compile Include="TriangleSamplePage.xaml.cs">
+      <DependentUpon>TriangleSamplePage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -87,6 +91,10 @@
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
     <Page Include="MainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TriangleSamplePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
