--- a/ShapeDemo/ShapeDemoSilverlight/ShapeDemoSilverlight.csproj
+++ b/ShapeDemo/ShapeDemoSilverlight/ShapeDemoSilverlight.csproj
@@ -76,9 +76,19 @@
     <Compile Include="ArcDemoPage.xaml.cs">
       <DependentUpon>ArcDemoPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ButtonChrome.cs" />
+    <Compile Include="ButtonPage.xaml.cs">
+      <DependentUpon>ButtonPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Direction.cs" />
+    <Compile Include="LinePage.xaml.cs">
+      <DependentUpon>LinePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ProgressRingPage.xaml.cs">
+      <DependentUpon>ProgressRingPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ProgressTestPage.xaml.cs">
       <DependentUpon>ProgressTestPage.xaml</DependentUpon>
@@ -86,7 +96,10 @@
     <Compile Include="ProgressToHeightConverter.cs" />
     <Compile Include="ProgressToStrokeDashArrayConverter.cs" />
     <Compile Include="ProgressToStrokeDashArrayConverter2.cs" />
+    <Compile Include="ProgressWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RectangleStrokeDashArrayConverter.cs" />
+    <Compile Include="ReverseProgressToHeightConverter.cs" />
     <Compile Include="Triangle.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -98,13 +111,29 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ButtonPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="LinePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ProgressRingPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ProgressTestPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
