Shape Point Demo

--- a/ShapeDemo/ShapeDemoSilverlight/ShapeDemoSilverlight.csproj
+++ b/ShapeDemo/ShapeDemoSilverlight/ShapeDemoSilverlight.csproj
@@ -91,6 +91,9 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PointAnimationPage.xaml.cs">
+      <DependentUpon>PointAnimationPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ProgressRingPage.xaml.cs">
       <DependentUpon>ProgressRingPage.xaml</DependentUpon>
     </Compile>
@@ -131,6 +134,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PointAnimationPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
