--- a/ShapeDemo/ShapeDemo2/ShapeDemo2.csproj
+++ b/ShapeDemo/ShapeDemo2/ShapeDemo2.csproj
@@ -101,11 +101,18 @@
     <Compile Include="AttachedPropertyTestPage.xaml.cs">
       <DependentUpon>AttachedPropertyTestPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BehaviorBase.cs" />
+    <Compile Include="BehaviorCollection.cs" />
+    <Compile Include="BehaviorHelper.cs" />
+    <Compile Include="BehaviorTestPage.xaml.cs">
+      <DependentUpon>BehaviorTestPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Direction.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="PathExtention.cs" />
+    <Compile Include="PathProgressBehavior.cs" />
     <Compile Include="PointDemo2.xaml.cs">
       <DependentUpon>PointDemo2.xaml</DependentUpon>
     </Compile>
@@ -144,6 +151,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="BehaviorTestPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -160,6 +171,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.2.3</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed">
+      <Version>2.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
